<resources>
    <string name="app_name">花匠账本</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mingxi">明细</string>
    <string name="tubiao">图表</string>
    <string name="zhangben">账本</string>
    <string name="mine">我的</string>
    <string name="remeber_code">记住密码</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="regist">注册</string>
    <string name="username">用户名</string>
    <string name="phone">电话</string>
    <string name="register">注册</string>
    <string name="cost">支出</string>
    <string name="income">收入</string>
    <string name="jine">金额</string>
    <string name="xiaofei">消费</string>
    <string name="zhifubao">支付宝</string>
    <string name="beizhu">备注</string>
    <string name="zhangbenmingcheng">账本名称</string>
    <string name="chuangjianshijian">创建时间：</string>
    <string name="保存">保存</string>
    <string name="添加账本">添加账本</string>
    <string name="entry">进入</string>
    <string name="touxiang">头像</string>
    <string name="nicheng">昵称</string>
    <string name="xingbie">性别</string>
    <string name="shengri">生日</string>
    <string name="dianhua">电话</string>
    <string name="xihangka">银行卡</string>
    <string name="hongbao">红包</string>
    <string name="weixin">微信</string>
    <string name="xiaomiqianbao">小米钱包</string>
    <string name="jingdongzhifu">京东支付</string>
    <string name="applepay">ApplePay</string>
    <string name="xinyongka">信用卡</string>
    <string name="jiaoyu">教育</string>
    <string name="chongwu">宠物</string>
    <string name="baobao">包包</string>
    <string name="xiezi">鞋子</string>
    <string name="huazhuangpin">化妆品</string>
    <string name="dianqi">电器</string>
    <string name="caipiao">彩票</string>
    <string name="bangong">办公</string>
    <string name="xianjin">现金</string>

</resources>
