<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    >


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tabs_rg"
        android:layout_marginTop="-56dp" />

    <RadioGroup
        android:id="@+id/tabs_rg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bottomBarBackground"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/records"
            style="@style/Custom.TabRadioButton"
            android:checked="true"
            android:drawableTop="@drawable/tab_records_selector"
            android:text="@string/mingxi"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/chart"
            style="@style/Custom.TabRadioButton"
            android:drawableTop="@drawable/tab_graph_selector"
            android:text="@string/tubiao"
            android:textSize="12sp"/>

        <View style="@style/Custom.TabRadioButton" />

        <RadioButton
            android:id="@+id/bill"
            style="@style/Custom.TabRadioButton"
            android:drawableTop="@drawable/tab_bill_selector"
            android:text="@string/zhangben"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/mine"
            style="@style/Custom.TabRadioButton"
            android:drawableTop="@drawable/tab_my_selector"
            android:text="@string/mine"
            android:textSize="12sp"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/sign_iv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:src="@mipmap/tab_add_default" />
</RelativeLayout>