<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/tab_account_default" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="UserName"
        android:textColor="#000"
        android:textSize="23sp"
        android:typeface="monospace" />

    <RelativeLayout
        android:id="@+id/rl_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/iv_userIconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:src="@mipmap/tab_account_default" />

        <View
            android:id="@+id/viewName"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_userIconName"
            android:background="#BBB5B5" />

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/viewName"
            android:background="@null"
            android:ems="19"
            android:hint="  用户名"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_unameClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/clear"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_userName"
        android:layout_marginTop="1dp"
        android:background="@drawable/qmui_icon_notify_error">

        <ImageView
            android:id="@+id/iv_userIconPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:src="@mipmap/password" />

        <View
            android:id="@+id/viewPwd"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_userIconPwd"
            android:background="#BBB5B5" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/viewPwd"
            android:background="@null"
            android:drawablePadding="5dp"
            android:ems="19"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_pwdClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/clear"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_remeber_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_userPassword">

        <CheckBox
            android:id="@+id/cb_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:checked="false"
            android:duplicateParentState="false"
            android:text="@string/remeber_code"
            android:textColor="#666666"
            android:textSize="15sp"
            app:buttonTint="@color/qmui_btn_blue_text" />

        <com.qmuiteam.qmui.layout.QMUIButton
            android:id="@+id/btn_regist"
            android:layout_width="93dp"
            android:layout_height="27dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="300dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="20dp"
            android:background="@color/qmui_config_color_transparent"
            android:text="@string/regist"
            android:textColor="#03A9F4"/>

    </RelativeLayout>



    <Button
        android:id="@+id/btn_login"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_remeber_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#2196F3"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp" />

</RelativeLayout>