<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_re_titlebar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:background="@color/titleBackground">

        <TextView
            android:id="@+id/text_re_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="marquee"
            android:gravity="center_horizontal|center"
            android:singleLine="true"
            android:text="@string/register"
            android:textColor="@color/titleText"
            android:textSize="20dp" />


        <ImageButton
            android:id="@+id/btbReBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:drawablePadding="6dp"
            android:ellipsize="end"
            android:gravity="center"
            android:background="@color/qmui_config_color_transparent"
            android:singleLine="true"
            android:src="@mipmap/back"
            android:textSize="18sp"
            tools:src="@mipmap/back" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/tab_account_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image_logo"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_register_identify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:drawablePadding="5dp"
            android:inputType="phone"
            android:ems="19"
            android:hint="@string/phone"
             />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:background="@null"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:ems="19"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FFFFFF">

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/code"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="验证码"
                android:background="@null"
                android:drawablePadding="5dp"
                android:ems="19"
                />

            <Button
                android:id="@+id/btnGetCode"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/code"
                android:background="#3F51B5"
                android:text="获取验证码"
                android:visibility="visible" />

            <TextView
                android:id="@+id/now"
                android:layout_marginRight="20dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/code"
                android:visibility="gone"
                android:text="提示信息"
                android:textColor="#aaaaaa" />


        </LinearLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/btnGetCode"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:text="注册"
            android:background="@color/btn_filled_blue_bg_disabled"
            android:textColor="@android:color/white" />





    </LinearLayout>


</RelativeLayout>
